--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -1,70 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_signup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
-        android:hint="@string/full_name"
-        android:layout_marginRight="32dp"
-        style="@style/materialEditText"
-        android:layout_marginTop="16dp"
-        android:inputType="textPersonName"
-        android:layout_height="wrap_content" />
+    <LinearLayout
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/phone_no"
-        android:layout_width="match_parent"
-        android:layout_marginRight="32dp"
-        android:inputType="phone"
-        style="@style/materialEditText"
-        android:layout_marginTop="16dp"
-        android:hint="@string/phone_number"
-        android:layout_height="wrap_content" />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/email_id"
+        android:id="@+id/activity_signup"
         android:layout_width="match_parent"
-        android:inputType="textEmailAddress"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="16dp"
-        style="@style/materialEditText"
-        android:hint="@string/email_id"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_marginRight="32dp"
-        android:inputType="text"
-        style="@style/materialEditText"
-        android:layout_marginTop="16dp"
-        android:hint="@string/username"
-        android:layout_height="wrap_content" />
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:hint="@string/full_name"
+            android:gravity="center"
+            style="@style/materialEditText"
+            android:layout_marginTop="16dp"
+            android:inputType="textPersonName"
+            android:layout_height="wrap_content" />
 
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="16dp"
-        style="@style/materialEditText"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:layout_height="wrap_content" />
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/phone_no"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:inputType="phone"
+            style="@style/materialEditText"
+            android:hint="@string/phone_number"
+            android:layout_height="wrap_content" />
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/email_id"
+            android:layout_width="match_parent"
+            android:inputType="textEmailAddress"
+            android:gravity="center"
+            style="@style/materialEditText"
+            android:hint="@string/email_id"
+            android:layout_height="wrap_content" />
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/username"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:inputType="text"
+            style="@style/materialEditText"
+            android:hint="@string/username"
+            android:layout_height="wrap_content" />
+
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            style="@style/materialEditText"
+            android:gravity="center"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/submit_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/holo_blue_light"
         android:text="@string/submit"/>
 
-
-
-</LinearLayout>
+</RelativeLayout>
