--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.SearchView
@@ -9,7 +10,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ListView
+        android:paddingLeft="16dp"
+        android:paddingTop="32dp"
+        android:paddingBottom="16dp"
+        android:paddingRight="16dp"
+        android:id="@+id/listview_topics"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </ListView>
 
-</FrameLayout>
+
+</LinearLayout>
 
 
