--- a/MyApplication/app/src/main/res/layout/list_item_topic.xml
+++ b/MyApplication/app/src/main/res/layout/list_item_topic.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:textSize="20sp"
-    android:minHeight="?android:attr/listPreferredItemHeight"
-    android:id="@+id/list_item_topic_textview" />
+    android:padding="16dp"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/textview_topic_name"
+        tools:text="novopay"
+        android:textStyle="bold"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        tools:text="fintech startup"
+        android:id="@+id/textview_topic_summary"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+</LinearLayout>
