--- a/MyApplication/app/src/main/res/layout/activity_get_reviews.xml
+++ b/MyApplication/app/src/main/res/layout/activity_get_reviews.xml
@@ -1,14 +1,49 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     android:paddingTop="16dp"
     android:paddingBottom="@dimen/activity_vertical_margin">
+
+    <LinearLayout
+        android:paddingBottom="32dp"
+        android:paddingTop="16dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+        <ImageView
+            android:src="@mipmap/ic_launcher"
+            tools:contentDescription="topic icon"
+            android:contentDescription="topic icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/topic_name"
+            android:text="novopay"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            tools:text="novopay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/topic_summary"
+            android:text="a fintech startup"
+            tools:text="a fintech startup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/listview_reviews"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</FrameLayout>
+</LinearLayout>
 
