--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -10,15 +10,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ListView
-        android:paddingLeft="16dp"
-        android:paddingTop="32dp"
-        android:paddingBottom="16dp"
-        android:paddingRight="16dp"
-        android:id="@+id/listview_topics"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </ListView>
+
+        <ListView
+            android:paddingLeft="16dp"
+            android:paddingTop="32dp"
+            android:paddingBottom="16dp"
+            android:paddingRight="16dp"
+            android:id="@+id/listview_topics"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </ListView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@drawable/ic_create_white_24dp"/>
+
+
+    </FrameLayout>
+
+
 
 
 </LinearLayout>
