--- a/MyApplication/app/src/main/res/layout/activity_post_reviews.xml
+++ b/MyApplication/app/src/main/res/layout/activity_post_reviews.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
@@ -14,44 +13,45 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
         <LinearLayout
-
-
-            android:id="@+id/activity_login"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:padding="16dp"
             android:orientation="vertical"
-            android:padding="16dp">
-
-            <TextView
-                android:layout_marginTop="16dp"
-                android:id="@+id/loginTextView"
-                android:text="@string/login"
-                android:textSize="30sp"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-condensed"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <com.project.letsreview.components.EditText
-                android:id="@+id/username"
+                android:id="@+id/topic_name"
                 android:layout_width="match_parent"
-                android:hint="@string/username"
-                android:gravity="center"
+                android:hint="@string/topic"
                 style="@style/materialEditText"
                 android:layout_marginTop="16dp"
                 android:inputType="textPersonName"
                 android:layout_height="wrap_content" />
 
             <com.project.letsreview.components.EditText
-                android:id="@+id/password"
+                android:id="@+id/content"
                 android:layout_width="match_parent"
-                android:gravity="center"
-                android:inputType="textPassword"
+                android:inputType="textMultiLine"
+                android:lines="5"
                 style="@style/materialEditText"
-                android:hint="@string/password"
+                android:hint="@string/content"
                 android:layout_height="wrap_content" />
+
+            <TextView
+                android:text="@string/rating"
+                tools:text="Rating:"
+                android:paddingTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+            <RatingBar
+                android:paddingTop="16dp"
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:stepSize="1" />
+
 
         </LinearLayout>
     </ScrollView>
@@ -65,4 +65,3 @@
         android:text="@string/submit"/>
 
 </RelativeLayout>
-
