--- a/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -34,10 +34,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
+            <TextView
+                android:clickable="true"
+                android:paddingTop="16dp"
+                android:id="@+id/no_account_yet_text_view"
+                android:text="@string/no_account_yet"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
             <com.project.letsreview.components.EditText
                 android:id="@+id/username"
                 android:layout_width="match_parent"
-                android:hint="@string/username"
+                android:hint="@string/username_placeholder"
                 android:gravity="center"
                 style="@style/materialEditText"
                 android:layout_marginTop="16dp"
@@ -50,7 +59,7 @@
                 android:gravity="center"
                 android:inputType="textPassword"
                 style="@style/materialEditText"
-                android:hint="@string/password"
+                android:hint="@string/password_placeholder"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
