--- a/MyApplication/app/src/main/res/layout/activity_post_reviews.xml
+++ b/MyApplication/app/src/main/res/layout/activity_post_reviews.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
@@ -43,15 +44,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-
-            <RatingBar
-                android:paddingTop="16dp"
+            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                 android:id="@+id/ratingBar"
+                android:paddingTop="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:numStars="5"
-                android:stepSize="1" />
-
+                app:srb_starSize="40dp"
+                app:srb_numberOfStars="5"
+                app:srb_rating="3"
+                app:srb_stepSize="1.0"
+                app:srb_borderColor="@color/colorPrimary"
+                app:srb_fillColor="@color/colorPrimary"
+                />
 
         </LinearLayout>
     </ScrollView>
