--- a/MyApplication/app/src/main/res/layout/activity_signup.xml
+++ b/MyApplication/app/src/main/res/layout/activity_signup.xml
@@ -48,7 +48,7 @@
             <com.project.letsreview.components.EditText
                 android:id="@+id/name"
                 android:layout_width="match_parent"
-                android:hint="@string/full_name"
+                android:hint="@string/full_name_placeholder"
                 android:gravity="center"
                 style="@style/materialEditText"
                 android:layout_marginTop="16dp"
@@ -61,7 +61,7 @@
                 android:gravity="center"
                 android:inputType="phone"
                 style="@style/materialEditText"
-                android:hint="@string/phone_number"
+                android:hint="@string/phone_number_placeholder"
                 android:layout_height="wrap_content" />
 
             <com.project.letsreview.components.EditText
@@ -70,7 +70,7 @@
                 android:inputType="textEmailAddress"
                 android:gravity="center"
                 style="@style/materialEditText"
-                android:hint="@string/email_id"
+                android:hint="@string/email_id_placeholder"
                 android:layout_height="wrap_content" />
 
             <com.project.letsreview.components.EditText
@@ -79,7 +79,7 @@
                 android:gravity="center"
                 android:inputType="text"
                 style="@style/materialEditText"
-                android:hint="@string/username"
+                android:hint="@string/username_placeholder"
                 android:layout_height="wrap_content" />
 
             <com.project.letsreview.components.EditText
@@ -87,7 +87,7 @@
                 android:layout_width="match_parent"
                 style="@style/materialEditText"
                 android:gravity="center"
-                android:hint="@string/password"
+                android:hint="@string/password_placeholder"
                 android:inputType="textPassword"
                 android:layout_height="wrap_content" />
 
