--- a/MyApplication/app/src/main/res/layout/activity_post_reviews.xml
+++ b/MyApplication/app/src/main/res/layout/activity_post_reviews.xml
@@ -19,7 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <com.project.letsreview.components.EditText
+
+            <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                 android:id="@+id/topic_name"
                 android:layout_width="match_parent"
                 android:hint="@string/topic"
@@ -51,7 +52,7 @@
                 android:layout_height="wrap_content"
                 app:srb_starSize="40dp"
                 app:srb_numberOfStars="5"
-                app:srb_rating="3"
+                app:srb_rating="1"
                 app:srb_stepSize="1.0"
                 app:srb_borderColor="@color/colorPrimary"
                 app:srb_fillColor="@color/colorPrimary"
