--- a/MyApplication/app/src/main/res/layout/activity_home.xml
+++ b/MyApplication/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
@@ -24,20 +25,34 @@
             android:layout_height="match_parent">
         </ListView>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
+
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
+            android:id="@+id/multiple_actions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            fab:fab_labelStyle="@style/menu_labels_style"
             android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_create_white_24dp"/>
+            android:layout_margin="16dp">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/action_create_review"
+            android:layout_width="wrap_content"
+            fab:fab_icon="@drawable/ic_create_white_24dp"
+            android:layout_height="wrap_content"
+            fab:fab_title="@string/create_review" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/action_create_topic"
+            fab:fab_icon="@drawable/ic_create_white_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_title="@string/create_topic" />
+
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
 
 
     </FrameLayout>
-
-
-
-
 </LinearLayout>
 
 
