--- a/MyApplication/app/src/main/res/layout/activity_get_reviews.xml
+++ b/MyApplication/app/src/main/res/layout/activity_get_reviews.xml
@@ -1,21 +1,25 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:paddingTop="16dp"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    >
 
-    <LinearLayout
-        android:paddingBottom="32dp"
-        android:paddingTop="16dp"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        
+<android.support.design.widget.AppBarLayout
+    android:id="@+id/main.appbar"
+    android:layout_width="match_parent"
+    android:gravity="center_horizontal"
+    android:background="@color/white"
+    android:layout_height="wrap_content"
+    android:paddingBottom="8dp"
+    >
         <ImageView
+            android:paddingTop="16dp"
             android:src="@mipmap/ic_launcher"
+            app:layout_scrollFlags="scroll"
             tools:contentDescription="topic icon"
             android:contentDescription="topic icon"
             android:layout_width="wrap_content"
@@ -32,16 +36,30 @@
         <TextView
             android:id="@+id/topic_summary"
             tools:text="a fintech startup"
+            app:layout_scrollFlags="scroll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-    </LinearLayout>
+
+</android.support.design.widget.AppBarLayout>
+
+<android.support.v7.widget.RecyclerView
+    android:paddingTop="8dp"
+    android:id="@+id/recycler_view_reviews"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:scrollbars="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
 
-    <ListView
-        android:id="@+id/listview_reviews"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<com.getbase.floatingactionbutton.FloatingActionButton
+    android:id="@+id/action_create_review"
+    android:layout_width="wrap_content"
+    android:layout_gravity="bottom|right"
+    android:layout_marginBottom="@dimen/activity_vertical_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    fab:fab_icon="@drawable/ic_create_white_24dp"
+    android:layout_height="wrap_content"
+    fab:fab_title="@string/create_review" />
 
-</LinearLayout>
-
+</android.support.design.widget.CoordinatorLayout>
