--- a/MyApplication/app/src/main/res/layout/activity_post_topic.xml
+++ b/MyApplication/app/src/main/res/layout/activity_post_topic.xml
@@ -19,6 +19,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:layout_marginTop="16dp"
+                android:id="@+id/createTopicTextView"
+                android:text="@string/create_topic"
+                android:textSize="30sp"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:fontFamily="sans-serif-condensed"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
 
             <com.project.letsreview.components.EditText
                 android:id="@+id/topic_name"
