changed launcher icon and icon on get reviews activity

--- a/MyApplication/app/src/main/res/layout/activity_get_reviews.xml
+++ b/MyApplication/app/src/main/res/layout/activity_get_reviews.xml
@@ -18,7 +18,7 @@
     >
         <ImageView
             android:paddingTop="16dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/defualt_app_icon"
             app:layout_scrollFlags="scroll"
             tools:contentDescription="topic icon"
             android:contentDescription="topic icon"
